--- a/AMUSE-Tutorial-09.2022/particles.ipynb
+++ b/AMUSE-Tutorial-09.2022/particles.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun= Particle(13762123353202436545, set=<139627746690336>\n",
+      "Sun= Particle(2395690340683215979, set=<139846899449472>\n",
       "    , mass=1.0 MSun\n",
       "    , vx=0.0 kms\n",
       "    , vy=0.0 kms\n",
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Earth= Particle(13291616774787519054, set=<139627746690336>\n",
+      "Earth= Particle(1318726472639116335, set=<139846899449472>\n",
       "    , mass=3.00273515275e-06 MSun\n",
       "    , vx=0.0 kms\n",
       "    , vy=29.7885123292 kms\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,8 @@
       "                 key         mass           vx           vy           vz            x            y            z\n",
       "                   -         MSun          kms          kms          kms           au           au           au\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      "13762123353202436545    1.000e+00    0.000e+00   -8.945e-05    0.000e+00   -3.003e-06    0.000e+00    0.000e+00\n",
-      "13291616774787519054    3.003e-06    0.000e+00    2.979e+01    0.000e+00    1.000e+00    0.000e+00    0.000e+00\n",
+      " 2395690340683215979    1.000e+00    0.000e+00   -8.945e-05    0.000e+00   -3.003e-06    0.000e+00    0.000e+00\n",
+      " 1318726472639116335    3.003e-06    0.000e+00    2.979e+01    0.000e+00    1.000e+00    0.000e+00    0.000e+00\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun= Particle(13762123353202436545, set=<139627746690336>\n",
+      "Sun= Particle(2395690340683215979, set=<139846899449472>\n",
       "    , mass=1.0 MSun\n",
       "    , name=sun\n",
       "    , vx=0.0 kms\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
       "moon=                  key         mass         name           vx           vy           vz            x            y            z\n",
       "                   -           kg         none  44597309335878.1 * m * s**-1  44597309335878.1 * m * s**-1  44597309335878.1 * m * s**-1           km           km           km\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      "11333667448863060084    7.348e+22         moon    0.000e+00    2.297e-11    0.000e+00    3.844e+05    0.000e+00    0.000e+00\n",
+      "15170337243629451596    7.348e+22         moon    0.000e+00    2.297e-11    0.000e+00    3.844e+05    0.000e+00    0.000e+00\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<amuse.datamodel.particles.Particle at 0x7efd7a3e1b00>"
+       "<amuse.datamodel.particles.Particle at 0x7f30a57c7bc0>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -274,9 +274,9 @@
       "Solar system:                  key         mass         name           vx           vy           vz            x            y            z\n",
       "                   -         MSun         none          kms          kms          kms           au           au           au\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      "13762123353202436545    1.000e+00          sun    0.000e+00   -9.059e-05    0.000e+00   -3.040e-06    0.000e+00    0.000e+00\n",
-      "13291616774787519054    3.003e-06        earth    0.000e+00    2.979e+01    0.000e+00    1.000e+00    0.000e+00    0.000e+00\n",
-      "11333667448863060084    3.694e-08         moon    0.000e+00    3.081e+01    0.000e+00    1.003e+00    0.000e+00    0.000e+00\n",
+      " 2395690340683215979    1.000e+00          sun    0.000e+00   -9.059e-05    0.000e+00   -3.040e-06    0.000e+00    0.000e+00\n",
+      " 1318726472639116335    3.003e-06        earth    0.000e+00    2.979e+01    0.000e+00    1.000e+00    0.000e+00    0.000e+00\n",
+      "15170337243629451596    3.694e-08         moon    0.000e+00    3.081e+01    0.000e+00    1.003e+00    0.000e+00    0.000e+00\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "       [  4.86057963e-06,   0.00000000e+00,   0.00000000e+00]])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        " 'z']"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
       " |  \n",
       " |  compressed(self)\n",
       " |  \n",
-      " |  copy(self, memento=None, keep_structure=False, filter_attributes=<function AbstractParticleSet.<lambda> at 0x7efd7be435b0>)\n",
+      " |  copy(self, memento=None, keep_structure=False, filter_attributes=<function AbstractParticleSet.<lambda> at 0x7f30a4e7f520>)\n",
       " |      Creates a new in particle set and copies all attributes and \n",
       " |      values into this set. \n",
       " |      \n",
@@ -880,7 +880,7 @@
       " |      keep_structure -- internal, if True, in case of a sub or super set make a copy of\n",
       " |                 the original set and return a new subset (default: False)\n",
       " |  \n",
-      " |  copy_to_new_particles(self, keys=None, keys_generator=None, memento=None, keep_structure=False, filter_attributes=<function AbstractParticleSet.<lambda> at 0x7efd7be436d0>)\n",
+      " |  copy_to_new_particles(self, keys=None, keys_generator=None, memento=None, keep_structure=False, filter_attributes=<function AbstractParticleSet.<lambda> at 0x7f30a4e7f640>)\n",
       " |  \n",
       " |  copy_values_of_attribute_to(self, attribute_name, particles)\n",
       " |      Copy values of one attribute from this set to the\n",
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1455,12 +1455,13 @@
       "Jupiter=                  key         mass         name           vx           vy           vz            x            y            z\n",
       "                   -         MSun         none  3646245880.357221 * m * s**-1  3646245880.357221 * m * s**-1  3646245880.357221 * m * s**-1           AU           AU           AU\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      " 8732839206723627215    9.551e-04      Jupiter    0.000e+00    3.581e-06    0.000e+00    5.204e+00    0.000e+00    0.000e+00\n",
+      " 3884351573782740435    9.551e-04      Jupiter    0.000e+00    3.581e-06    0.000e+00    5.204e+00    0.000e+00    0.000e+00\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
    ],
    "source": [
+    "# Assignment 1\n",
     "Jupiter = Particles(1)\n",
     "Jupiter.name = \"Jupiter\"\n",
     "Jupiter.mass = 1/1047 | units.MSun\n",
@@ -1473,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1483,10 +1484,10 @@
       "Solar system:                  key         mass         name           vx           vy           vz            x            y            z\n",
       "                   -         MSun         none          kms          kms          kms           au           au           au\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      "13762123353202436545    1.000e+00          sun    0.000e+00   -1.255e-02    0.000e+00   -4.968e-03    0.000e+00    0.000e+00\n",
-      "13291616774787519054    3.003e-06        earth    0.000e+00    2.978e+01    0.000e+00    9.950e-01    0.000e+00    0.000e+00\n",
-      "11333667448863060084    3.694e-08         moon    0.000e+00    3.080e+01    0.000e+00    9.976e-01    0.000e+00    0.000e+00\n",
-      " 8732839206723627215    9.551e-04      Jupiter    0.000e+00    1.305e+01    0.000e+00    5.199e+00    0.000e+00    0.000e+00\n",
+      " 2395690340683215979    1.000e+00          sun    0.000e+00   -1.255e-02    0.000e+00   -4.968e-03    0.000e+00    0.000e+00\n",
+      " 1318726472639116335    3.003e-06        earth    0.000e+00    2.978e+01    0.000e+00    9.950e-01    0.000e+00    0.000e+00\n",
+      "15170337243629451596    3.694e-08         moon    0.000e+00    3.080e+01    0.000e+00    9.976e-01    0.000e+00    0.000e+00\n",
+      " 3884351573782740435    9.551e-04      Jupiter    0.000e+00    1.305e+01    0.000e+00    5.199e+00    0.000e+00    0.000e+00\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
@@ -1501,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1511,14 +1512,15 @@
       "                 key         mass         name           vx           vy           vz            x            y            z\n",
       "                   -         MSun         none  3646245880.3572216 * m * s**-1  3646245880.3572216 * m * s**-1  3646245880.3572216 * m * s**-1  149597870691.0 * m  149597870691.0 * m  149597870691.0 * m\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
-      " 8950592050871569139    1.000e+00          sun    2.489e-12   -2.500e-11   -5.958e-13   -3.061e-06   -3.046e-07   -7.258e-09\n",
-      " 1544919731828068009    3.040e-06        earth   -8.089e-07    8.124e-06    1.935e-07    9.951e-01    9.900e-02    2.359e-03\n",
-      "12419903058802788679    3.694e-08         moon   -8.171e-07    8.401e-06    2.107e-07    9.976e-01    9.907e-02    2.364e-03\n",
+      "14027119358612220498    1.000e+00          sun    2.073e-12   -2.505e-11   -2.346e-13   -3.066e-06   -2.537e-07   -2.376e-09\n",
+      " 8644265407212061748    3.040e-06        earth   -6.737e-07    8.138e-06    7.596e-08    9.966e-01    8.247e-02    7.723e-04\n",
+      "11224631572434961694    3.694e-08         moon   -6.782e-07    8.415e-06    9.954e-08    9.991e-01    8.251e-02    7.758e-04\n",
       "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
      ]
     }
    ],
    "source": [
+    "# Assignment 2\n",
     "from amuse.ext import orbital_elements\n",
     "from random import random\n",
     "Sun, Earth = orbital_elements.generate_binaries(sun.mass, earth.mass+moon.mass, 1 | units.au, 0, random()/10, random()/10, 0, 0, G=G)\n",
@@ -1540,20 +1542,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<amuse.datamodel.particles.Particles object at 0x7efd7bc991e0>, <amuse.datamodel.particles.Particles object at 0x7efd9e3c98d0>, <amuse.datamodel.particles.Particles object at 0x7efd9e3cb6d0>]\n"
+      "[<amuse.datamodel.particles.Particles object at 0x7f30c0dcea10>, <amuse.datamodel.particles.Particles object at 0x7f30c0dce3e0>, <amuse.datamodel.particles.Particles object at 0x7f30a40c9510>]\n"
      ]
     }
    ],
    "source": [
     "from amuse.datamodel import particle_attributes\n",
     "print(particle_attributes.get_binaries(sun_earth_moon, hardness=10, G = G))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 key         mass         name           vx           vy           vz            x            y            z\n",
+      "                   -         MSun         none  3646245880.3572216 * m * s**-1  3646245880.3572216 * m * s**-1  3646245880.3572216 * m * s**-1  149597870691.0 * m  149597870691.0 * m  149597870691.0 * m\n",
+      "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n",
+      "14027119358612220498    1.000e+00          sun   -4.066e-07   -2.665e-09   -2.346e-13    7.968e+00    1.067e+01   -2.376e-09\n",
+      " 8644265407212061748    3.040e-06        earth   -1.080e-06    8.135e-06    7.596e-08    8.965e+00    1.075e+01    7.723e-04\n",
+      "11224631572434961694    3.694e-08         moon   -1.085e-06    8.412e-06    9.954e-08    8.967e+00    1.075e+01    7.758e-04\n",
+      " 2213178008844912283    2.000e+00   2MSun Star    2.032e-07   -1.468e-09    7.625e-30   -3.984e+00   -5.333e+00    7.862e-26\n",
+      "16200235149775660787    3.003e-05      planet1    2.032e-07    3.653e-05    7.625e-30   -3.884e+00   -5.333e+00    7.862e-26\n",
+      "15488160621421059020    3.003e-04      planet2    2.032e-07    1.491e-05    7.625e-30   -3.384e+00   -5.333e+00    7.862e-26\n",
+      "====================  ===========  ===========  ===========  ===========  ===========  ===========  ===========  ===========\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assignment 4\n",
+    "Sun1, Star = orbital_elements.generate_binaries(sun_earth_moon.mass.sum(), 2*sun.mass, 60 | units.au, 0.6, 180, 0, 0, 0, G=G)\n",
+    "Star1, P1 = orbital_elements.generate_binaries(2*sun.mass, 10*earth.mass, 0.1 | units.au, 0, 0, 0, 0, 0, G=G)\n",
+    "Star2, P2 = orbital_elements.generate_binaries(2*sun.mass, 100*earth.mass, 0.6 | units.au, 0, 0, 0, 0, 0, G=G)\n",
+    "Star.position +- Star1.position+Star2.position\n",
+    "Star.velocity +- Star1.velocity+Star2.velocity\n",
+    "P1.position += Star.position\n",
+    "P1.velocity += Star.velocity\n",
+    "P2.position += Star.position\n",
+    "P2.velocity += Star.velocity\n",
+    "newsystem = sun_earth_moon\n",
+    "newsystem.add_particle(Star)\n",
+    "newsystem.add_particle(P1)\n",
+    "newsystem.add_particle(P2)\n",
+    "newsystem.move_to_center()\n",
+    "\n",
+    "newsystem.name = [\"sun\", \"earth\", \"moon\", \"2MSun Star\", \"planet1\", \"planet2\"]\n",
+    "print(newsystem)\n"
    ]
   },
   {
