--- a/AMUSE-Tutorial-09.2022/scalar_units.ipynb
+++ b/AMUSE-Tutorial-09.2022/scalar_units.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,8 @@
      "output_type": "stream",
      "text": [
       "The range in velocities is between 19.5011296629 kms and 28.7783937845 kms\n",
-      "Since the acceleration due to earth gravitation is propotional to sqrt(G*Me/R), which is <<sqrt(G*MSun/R), the influence of earth doesn't matter.\n"
+      "However, considering the orbit motion of earth, the range in velocities that hit the earth surface is between 0 kms and 58.5668613903 kms\n",
+      "Since the acceleration due to earth gravitation is propotional to sqrt(G*Me/R), which is <<sqrt(G*MSun/R), the influence of earth is very weak.\n"
      ]
     }
    ],
@@ -209,12 +210,13 @@
     "vmax = ((1+0.4)*G*mstar/((1-0.4)*a1)).sqrt()\n",
     "vmin = ((1-0.4)*G*mstar/((1+0.4)*a2)).sqrt()\n",
     "print(\"The range in velocities is between\", vmin.in_(units.kms), \"and\", vmax.in_(units.kms))\n",
-    "print(\"Since the acceleration due to earth gravitation is propotional to sqrt(G*Me/R), which is <<sqrt(G*MSun/R), the influence of earth doesn't matter.\")"
+    "print(\"However, considering the orbit motion of earth, the range in velocities that hit the earth surface is between\", 0 | units.kms, \"and\", vmax.in_(units.kms)+vorb.in_(units.kms))\n",
+    "print(\"Since the acceleration due to earth gravitation is propotional to sqrt(G*Me/R), which is <<sqrt(G*MSun/R), the influence of earth is very weak.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
